// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image renders 1`] = `
.c0 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
  box-sizing: border-box;
  display: block;
  width: auto;
  max-width: auto;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width:48rem) {
  .c0 {
    margin: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    margin: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    margin: 0;
  }
}

<div>
  <img
    className="c0"
    src="image.png"
  />
</div>
`;

exports[`Image renders with custom margin 1`] = `
.c0 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
  box-sizing: border-box;
  display: block;
  width: auto;
  max-width: auto;
  height: auto;
  max-height: auto;
  margin: 2.48832rem;
  padding: 0;
}

@media only screen and (min-width:48rem) {
  .c0 {
    margin: 2.48832rem;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    margin: 2.48832rem;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    margin: 2.48832rem;
  }
}

<div>
  <img
    className="c0"
    src="image.png"
  />
</div>
`;

exports[`Image renders with fixed height 1`] = `
.c0 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
  box-sizing: border-box;
  display: block;
  width: auto;
  max-width: auto;
  height: 100px;
  max-height: 100px;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width:48rem) {
  .c0 {
    margin: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    margin: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    margin: 0;
  }
}

<div>
  <img
    className="c0"
    src="image.png"
  />
</div>
`;

exports[`Image renders with fixed width 1`] = `
.c0 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
  box-sizing: border-box;
  display: block;
  width: 100px;
  max-width: 100px;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width:48rem) {
  .c0 {
    margin: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    margin: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    margin: 0;
  }
}

<div>
  <img
    className="c0"
    src="image.png"
  />
</div>
`;
